[project]
name = "cc-pyspark"
version = "0.1.0"
description = "Common Crawl data processing examples for PySpark."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "boto3>=1.40.63",
    "botocore>=1.40.63",
    "idna>=3.11",
    "lxml>=6.0.2",
    "orjson>=3.11.4",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    "ujson>=5.11.0",
    "warcio>=1.7.5",
    "pyspark==3.5.7",
]
[tool.pytest.ini_options]
pythonpath = [
    "src"
]
